# CourseWork5-SQL-

./: README.md  config.py  database.ini  main.py  pyproject.toml
src/: Abstract_HH_API.py  Company.py  DBManager.py  HH_API.py  Vacancy.py  func.py
