[tool.poetry]
name = "coursework5 (sql)"
version = "0.1.0"
description = ""
authors = ["Коробов Василий <kavyabass51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
progressbar = "^2.5"
progressbar2 = "^4.4.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
